resolve z-index conflict

--- a/app/assets/styles/navbar.scss
+++ b/app/assets/styles/navbar.scss
@@ -112,3 +112,7 @@
   background: #f5d7b4;
 }
 
+div.sticky-container {
+  z-index: 99;
+}
+
